--- a/web.config
+++ b/web.config
@@ -20,7 +20,7 @@
         <add extension=".rdlc" type="Microsoft.Reporting.RdlBuildProvider, Microsoft.ReportViewer.WebForms, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
       </buildProviders>
     </compilation>
-    <!--
+    <!--	Mohamed Salah
 	<customErrors mode="RemoteOnly" defaultRedirect="login.aspx"/>
      -->
   </system.web>
